# qt_rubiks_cube

./: CMakeLists.txt  QtRubiksCube_es_ES.ts  colorutils.cpp  colorutils.h  mainwindow.cpp  mainwindow.ui  mathutils.cpp  mathutils.h  rubiksopenglwidget.cpp  rubiksopenglwidget.h
